--- a/src/app/chat/components/chat-window/chat-window.component.html
+++ b/src/app/chat/components/chat-window/chat-window.component.html
@@ -4,35 +4,10 @@
     <mat-icon>menu</mat-icon>
   </div>
 </div>
+
+
 <div class="chat-message-container">
-  <simple-msg [isSent]="true" [message]="'Hi Hello There How are you?'"></simple-msg>
-  <simple-msg [isSent]="true" [message]="'Display checkbox on mouse over'"></simple-msg>
-  <simple-msg [isSent]="false" [message]="'Delete notification after 10min.'"></simple-msg>
-  <simple-msg [isSent]="true" [message]="'Show Desktop notification if browser tab is in active.Update unread count..Display checkbox on mouse over'"></simple-msg>
-  <simple-msg [isSent]="true" [message]="'Update unread count.'"></simple-msg>
-  <simple-msg [isSent]="false" [message]="'Hi Hello There \nHow are you?'"></simple-msg>
-  <simple-msg [isSent]="true" [message]="'Display checkbox on mouse over'"></simple-msg>
-  <simple-msg [isSent]="false" [message]="'Delete notification after 10min.'"></simple-msg>
-  <simple-msg [isSent]="true" [message]="'Show Desktop notification if browser tab is in active'"></simple-msg>
-  <simple-msg [isSent]="true" [message]="'Update unread count.'"></simple-msg>
-  <simple-msg [isSent]="false" [message]="'Hi Hello There How are you?'"></simple-msg>
-  <simple-msg [isSent]="true" [message]="'Display checkbox on mouse over'"></simple-msg>
-  <simple-msg [isSent]="false" [message]="'Show Desktop notification if browser tab is in active.Update unread count..Display checkbox on mouse over.'"></simple-msg>
-  <simple-msg [isSent]="true" [message]="'Show Desktop notification if browser tab is in active'"></simple-msg>
-  <simple-msg [isSent]="true" [message]="'Update unread count.'"></simple-msg>
-  <simple-msg [isSent]="false" [message]="'Hi Hello There How are you?'"></simple-msg>
-  <simple-msg [isSent]="true" [message]="'Display checkbox on mouse over'"></simple-msg>
-  <simple-msg [isSent]="false" [message]="'Delete notification after 10min.'"></simple-msg>
-  <simple-msg [isSent]="true" [message]="'Show Desktop notification if browser tab is in active'"></simple-msg>
-  <simple-msg [isSent]="true" [message]="'Update unread count.'"></simple-msg>
-  <simple-msg [isSent]="false" [message]="'Hi Hello There How are you?'"></simple-msg>
-  <simple-msg [isSent]="true" [message]="'Display checkbox on mouse over'"></simple-msg>
-  <simple-msg [isSent]="false" [message]="'Delete notification after 10min.'"></simple-msg>
-  <simple-msg [isSent]="true" [message]="'Show Desktop notification if browser tab is in active'"></simple-msg>
-  <simple-msg [isSent]="true" [message]="'Update unread count.'"></simple-msg>
-  <simple-msg [isSent]="false" [message]="'Hi Hello There How are you?'"></simple-msg>
-  <simple-msg [isSent]="true" [message]="'Display checkbox on mouse over'"></simple-msg>
-  <simple-msg [isSent]="false" [message]="'Delete notification after 10min.'"></simple-msg>
-  <simple-msg [isSent]="true" [message]="'Show Desktop notification if browser tab is in active'"></simple-msg>
-  <simple-msg [isSent]="true" [message]="'Update unread count.'"></simple-msg>
+  <div *ngFor="let chatHistory of msg.chatHistory">
+    <simple-msg [isSent]="chatHistory.sent" [message]="chatHistory.msgText"></simple-msg>
+  </div>
 </div>
