--- a/src/app/chat/components/chat-list/chat-list.component.html
+++ b/src/app/chat/components/chat-list/chat-list.component.html
@@ -8,6 +8,6 @@
 </div>
 <div class="chat-list">
   <div *ngFor="let msg of msgs">
-    <single-chat class="chat" [chat]="msg" (showContactProfile)="contactAvatarClicked($event)"></single-chat>
+    <app-single-chat class="chat" [chat]="msg" (showContactProfile)="contactAvatarClicked($event)"></app-single-chat>
   </div>
 </div>
