--- a/src/app/chat/components/chat-window/chat-window.component.html
+++ b/src/app/chat/components/chat-window/chat-window.component.html
@@ -1,5 +1,5 @@
 <div class="header chat-window-header">
-  <single-chat [chat]="msg" class="header-chat"></single-chat>
+  <app-single-chat [chat]="msg" class="header-chat"></app-single-chat>
   <div class="header-options" (click)="btnOptionsClicked()">
     <mat-icon>menu</mat-icon>
   </div>
@@ -8,6 +8,6 @@
 
 <div class="chat-message-container">
   <div *ngFor="let chatHistory of msg.chatHistory">
-    <simple-msg [isSent]="chatHistory.sent" [message]="chatHistory.msgText"></simple-msg>
+    <app-simple-msg [isSent]="chatHistory.sent" [message]="chatHistory.msgText"></app-simple-msg>
   </div>
 </div>
