msg switch working

--- a/src/app/chat/components/single-chat/single-chat.component.html
+++ b/src/app/chat/components/single-chat/single-chat.component.html
@@ -1,4 +1,4 @@
-<div class="chat-container">
+<div class="chat-container" (click)="chatItemOnListClicked($event)">
   <div (click)="contactAvatarClicked()">
     <img class="avatar" src="{{chat.senderImage}}"/>
   </div>
