--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,12 +2,13 @@
   <div class="app-container">
     <app-chat-list class="chat-list-container"
                (showContactProfile)="isContactProfileActive = true"
-               (showUserProfile)="isUserProfileActive = true"></app-chat-list>
+               (showUserProfile)="isUserProfileActive = true"
+               (showChatWindow)="changeChatWindow($event)"></app-chat-list>
     <app-user-profile class="user-profile-container"
                   (closeUserProfile)="isUserProfileActive = false"
                   [class.active]="isUserProfileActive"></app-user-profile>
     <div class="chat-window">
-      <app-chat-window class="chat-window-container"
+      <app-chat-window [msg]="message" class="chat-window-container"
                    (showOptions)="isContactProfileActive = !isContactProfileActive"></app-chat-window>
       <app-contact-profile class="contact-profile-container"
                        (closeContactProfile)="isContactProfileActive = false"
