--- a/src/app/chat/components/chat-window/chat-window.component.css
+++ b/src/app/chat/components/chat-window/chat-window.component.css
@@ -13,6 +13,7 @@
   color: #bbbbbb;
   overflow: hidden;
   z-index: 1;
+  width: calc(100% - 15px)
 }
 
 .header-options {
@@ -28,6 +29,13 @@
   overflow-x: hidden;
 }
 
+.chat-message-input {
+  background-color: #EEEEEE;
+  flex: 2;
+  padding: 0 15px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
 .header-chat {
   display: block;
   /*background-color: #00acc1;*/
@@ -49,4 +57,61 @@
 .chat-message-container::-webkit-scrollbar-thumb
 {
   background-color: #bbb;
+}
+
+
+.chatMessageBox {
+  transition-delay: 0.12s;
+  padding: 0;
+  background-color: #fbfbfb;
+  -webkit-flex: none;
+  flex: none;
+  height: 49px;
+  box-sizing: border-box;
+  position: relative;
+  z-index: 100;
+  transition: box-shadow 0.18s ease-out, background-color 0.18s ease-out;
+}
+.chatMessageInput {
+  background: white;
+  display: inline-block;
+  margin: auto;
+  top: -50%;
+  width: 80%;
+  position: relative;
+  height: 70%;
+  border-radius: 5px;
+  border: 1px solid white;
+}
+.chatMessageInput input {
+  border: none;
+  line-height: 2em;
+  width: 100%;
+  top: 10%;
+  position: relative;
+}
+.gray-text, .grey-icon{
+  color: #999999;
+}
+input:focus {
+  outline: none;
+}
+.smiley {
+  top: -20%;
+  position: relative;
+  width: 9%;
+  text-align: center;
+  font-size: 1.5em;
+}
+.sendButton {
+  position: relative;
+  width: 10%;
+  height: 100%;
+  font-size: 3em;
+  display: inline-block;
+  text-align: center;
+}
+
+.smiley:hover, .sendButton:hover {
+  cursor: pointer;
 }
