--- a/src/app/chat/components/chat-list/chat-list.component.css
+++ b/src/app/chat/components/chat-list/chat-list.component.css
@@ -100,3 +100,27 @@ input:focus {
   transform: translateY(-50%);
   margin-right: 2px;
 }
+.chat-title {
+  font-size: 16px;
+  font-weight: bold;
+  color: #333;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+.chat-message {
+  font-size: 14px;
+  color: #666;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+.chat-summary {
+  /*background-color: #00bfa5;*/
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-left: 10px;
+  overflow: hidden;
+}
