--- a/src/app/chat/components/chat-list/chat-list.component.html
+++ b/src/app/chat/components/chat-list/chat-list.component.html
@@ -6,9 +6,9 @@
     <div class="chat-title">Kunal Ganglani</div>
     <div class="chat-message"> My status </div>
   </div>
-  <div class="header-options">
+  <!-- <div class="header-options">
     <mat-icon>menu</mat-icon>
-  </div>
+  </div> -->
 </div>
 <div class="searchBox">
   <div class="searchInput">
